# KokoLang

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Imports.h  KokoLang.cpp  KokoLang.g4  KokoLang.h  KokoLangInternal.h  LICENSE.md  README.md  build-gen.cmd  build-gen.sh  build-native.cmd  build-native.sh  build.cmd  build.sh  build32.sh  build64.sh  fib.kl  klapi.c  klapi.cpp  klapi.h  test.kl  todo.md
Interpreter/: ProgramVisitor.cpp  ProgramVisitor.h
Runtime/: KLFunction.h  KLInstruction.h  KLProgram.cpp  KLProgram.h  KLRuntime.h
cmake/: Antlr4Package.md  ExternalAntlr4Cpp.cmake  FindANTLR.cmake  README.md  antlr4-generator.cmake.in  antlr4-runtime.cmake.in
doc/: binary.md  readme.md
docs/: binary.md  readme.md
install/: CMakeLists.txt  link
samples/: echoargs.kl  test.kl
src/: CMakeLists.txt
src/compiler/Grammar/: ProgramVisitor.cpp  kopcodeshelper.cpp
src/host/: CMakeLists.txt  KokoLang.cpp  mempool.cpp  mempool.h  pool.hpp
src/include/: Imports.h  KLImports.h  KOpcode.h  KokoLang.h  KokoLangLib.h  klapi.h  klapi_builtins.h  klapi_types.h  kldelegates.h  kltypedef.h
src/include/Runtime/: KLCall.h  KLFunction.h  KLInstruction.h  KLObject.h  KLPackage.h  KLProgram.h  KLRuntime.h  KLTypes.h  OpCodes.h
src/kilasm/: CMakeLists.txt  KokoLangLib.cpp
src/kilasm/Grammar/: KLInterpreter.h  ProgramVisitor.cpp  ProgramVisitor.h  kopcodeshelper.cpp
src/kilasm/Impl/: ProgramVisitor.cpp  ProgramVisitor.h  kilasm_internal.h  klloader.cpp  kopcodeshelper.cpp
src/kilasm/include/: KokoLangLib.h  kilasm.h  klcompiler.h  klibimports.h  klloader.h
src/klvm/: CMakeLists.txt
src/klvm/Impl/: KokoLangInternal.h  klapi.cpp  klapi_builtins.cpp  klapi_methods.cpp  klapi_types.cpp  klbinary.cpp  klmetatype.cpp  klresolver.cpp  klruntime.cpp  klutil.cpp  klvm_internal.h
src/klvm/Impl/DataTypes/: KLFunction.cpp  KLFunctionImpl.h  KLInstruction.cpp  KLPackage.cpp  KLState.cpp  KLVariable.cpp  OpCodesImpl.cpp
src/klvm/Impl/builtins/: global.cpp  global.h  klarray_t.cpp  klbool_t.cpp  klfloat_t.cpp  klint_t.cpp  kllist_t.cpp  klmap_t.cpp  klptr_t.cpp  klstring_t.cpp  kltype_t.cpp
src/klvm/include/: KOpcode.h  klapi.h  klapi_builtins.h  klapi_types.h  klbinary.h  klconfig.h  kldelegates.h  klimports.h  klresolver.h  klruntime.h  kltypedef.h  klutil.h  klvm.h
src/klvm/include/Binary/: KDefinitionType.h  KLDefinitionType.h  KLMetaType.h  KLOpcode.h
src/klvm/include/DataTypes/: KLCall.h  KLFunction.h  KLInstruction.h  KLObject.h  KLPackage.h  KLRuntime.h  KLState.h  KLType.h  KLVariable.h
src/kokolang/: KokoLang.cpp
src/lib/: KokoLangInternal.h  KokoLangLib.cpp  klapi.cpp  klapi_builtins.cpp  klapi_types.cpp
src/lib/Interpreter/: KLInterpreter.h  ProgramVisitor.cpp  ProgramVisitor.h  kopcodeshelper.cpp
src/lib/RuntimeImpl/: KLCall.cpp  KLFunction.cpp  KLFunctionImpl.h  KLInstruction.cpp  KLPackage.cpp  KLProgram.cpp  OpCodesImpl.cpp
src/runtime/Impl/: KokoLangInternal.h  fnptr.h  klapi.cpp  klapi_builtins.cpp  klapi_types.cpp  klbinary.cpp  klresolver.cpp  klresolverImpl.h
src/runtime/Impl/DataTypes/: KLFunction.cpp  KLFunctionImpl.h  KLInstruction.cpp  KLPackage.cpp  KLVariable.cpp  OpCodesImpl.cpp
src/runtime/include/: Doxyfile  KOpcode.h  KokoLang.h  KokoLangLib.h  klapi.h  klapi_builtins.h  klapi_types.h  klbinary.h  kldelegates.h  klimports.h  klresolver.h  kltypedef.h
src/runtime/include/Binary/: KDefinitionType.h  KMetaType.h
src/runtime/include/DataTypes/: KLCall.h  KLFunction.h  KLInstruction.h  KLObject.h  KLPackage.h  KLRuntime.h  KLType.h  KLVariable.h
src/testing/: KokoLang.cpp
test/: CMakeLists.txt  kl_float.test.cpp  kl_int.test.cpp  kl_string.test.cpp  klapi.test.cpp  klapi_builtins.test.cpp  klapi_types.test.cpp  main.cpp  testmacros.h
tools/: link
